# vibe-tech-monorepo

./: .aiexclude  .env.example  .env.nx-cloud.example  .geminiignore  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.json  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  .mcp.json.example  .npmrc  .nxignore  .prettierignore  .woodpecker.yml  AGENTS.md  AI.md  AI_CODE_REVIEW_ANTIPATTERNS.md  CLAUDE.md  DEV_CONTEXT.md  FIX_DEPENDENCIES.md  GEMINI.md  MASTER_CONTEXT.md  README.md  SECURITY.md  TASKS.md  WORKSPACE.json  biome.json  check-vibe-paths.ps1  cleanup-claude-installs.ps1  cleanup-msi-center.ps1  commitlint.config.cjs  context.md  eslint.config.js  find-old-claude-files.ps1  fix-claude-desktop-config.ps1  fix-claude-path.ps1  fix-mcp-config.py  generate-manifests.mjs  (+18 more)
.changeset/: config.json
.claude/: AGENT_MEMORY_PROTOCOL.md  AGENT_RULES.md  AI_MOVED.md  BOOT_SEQUENCE.md  CLAUDE-OPTIMIZED.md  CLAUDE-TEMPLATE.md  CLAUDE_DESKTOP_INSTRUCTIONS.md  COMMON_WORKFLOWS.md  COMPREHENSIVE_AGENT_ARCHITECTURE.md  FINISHER_METHODOLOGY.md  FINISHER_PRIORITIZATION_EXAMPLE.md  FINISHER_QUICK_START.md  MANDATORY_NO_DUPLICATES.md  MCP_SETUP_GUIDE.md  MONOREPO_ARCHITECTURE.md  PNPM_MIGRATION_SUMMARY.md  README.md  SDK_INTEGRATION.md  SESSION_INIT.md  TRADING_BOT_GUIDE.md  TROUBLESHOOTING_GUIDE.md  agent-delegation.yaml  agents.json  brand-voice-guidelines.md  data-storage-config.json  hookify.block-npm-yarn.local.md  hookify.prevent-cdev-data-storage.local.md  hookify.protect-d-drive-data.local.md  hookify.require-tests-before-done.local.md  hookify.warn-console-log.local.md  hookify.warn-lock-file-edits.local.md  planning-thresholds.json  rules.md  settings.json  skill-mapping.json
.gemini/: AI_MOVED.md  CONFIGURATION_FIX_2026-02-03.md  CONTEXT.md  GEMINI_3_PROTOCOL_FIX.md  config.json  rules-global.md  settings.backup.20260122-220000.json  settings.json  settings.json.orig  styleguide.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.woodpecker/: self-healing-config.yml
_scripts/: backup_dbs.ps1  check_schemas.py  cleanup_learning_system.ps1  consolidate_phase1.ps1  migrate_learning.py  verify_migration.py
apps/nova-agent/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  test-api.ps1  test-openrouter-api.ps1
apps/nova-agent/src-tauri/.cargo/: config.toml
apps/nova-agent/src-tauri/capabilities/: default.json
apps/nova-agent/src-tauri/src/: activity_monitor.rs  context_engine.rs  guidance_engine.rs  http_server.rs  http_server_tests.rs  learning_bridge.py  lib.rs  main.rs  task_executor.rs  websocket_client.rs
apps/nova-agent/src-tauri/src/_refactor_draft/: guidance_engine_new.rs  guidance_rules_core.rs  guidance_rules_enhanced.rs  guidance_types.rs
apps/nova-agent/src-tauri/src/database/: activity.rs  connection.rs  errors.rs  learning.rs  memory.rs  migration_utils.rs  mod.rs  procedural.rs  seed.rs  tasks.rs  tests.rs  types.rs
apps/nova-agent/src-tauri/src/guidance_engine/: engine.rs  rules.rs  types.rs  utils.rs
apps/nova-agent/src-tauri/src/guidance_engine/rules/: basic.rs  enhanced.rs
apps/nova-agent/src-tauri/src/guidance_engine/rules/enhanced/: dependency.rs  performance.rs  predictive.rs  security.rs
apps/nova-agent/src-tauri/src/modules/: agents.rs  calendar.rs  copilot.rs  credentials.rs  db_handlers.rs  execution.rs  file_cleaner.rs  filesystem.rs  hallucination_detector.rs  llm.rs  memory.rs  ml_learning.rs  mod.rs  orchestrator.rs  path_policy.rs  pattern_engine.rs  prediction_engine.rs  procedural_memory.rs  project.rs  project_review.rs  prompts.rs  rag.rs  rag_collect.rs  scheduler.rs  screenshot.rs  state.rs  system_prompt.rs  web.rs  websocket_auth.rs
apps/nova-agent/src-tauri/src/modules/copilot/: commands.rs  database.rs  extractors.rs  indexer.rs  types.rs
apps/nova-agent/src-tauri/src/modules/db_handlers/: activity.rs  config.rs  deep_work.rs  guidance.rs  health.rs  tasks.rs  types.rs
apps/nova-agent/src-tauri/src/modules/llm/: commands.rs  mod.rs  protocol.rs  provider.rs  tools.rs  validation.rs
apps/nova-agent/src-tauri/src/modules/prediction_engine/: commands.rs  duration.rs  insights.rs  recommendations.rs  risk.rs  timing.rs  types.rs
apps/nova-agent/src-tauri/src/tests/: ipc_integration.rs
apps/nova-agent/src-tauri/src/websocket_client/: client.rs  connection.rs  messages.rs
apps/vibe-code-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/vibe-code-studio/src-tauri/.cargo/: config.toml
apps/vibe-code-studio/src-tauri/capabilities/: default.json  main.json
apps/vibe-code-studio/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  pty.rs  screenshot.rs
apps/vibe-justice/frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/vibe-justice/frontend/src-tauri/capabilities/: default.json
apps/vibe-justice/frontend/src-tauri/src/: lib.rs  main.rs
apps/vibe-justice/frontend/src-tauri/tests/: security.rs
apps/vtde/src-tauri/: Cargo.toml  PTY_TESTING_GUIDE.md  error.txt  tauri.conf.json
apps/vtde/src-tauri/.cargo/: config.toml
apps/vtde/src-tauri/capabilities/: default.json
apps/vtde/src-tauri/src/: affected.rs  auth.rs  database_explorer.rs  gemini.rs  lib.rs  main.rs  orchestrator.rs  pty.rs
backend/: .env.example  AI.md  GEMINI.legacy.2026-01-22.md  GEMINI.md  README.md  package.json  project.json  server-production.js  server.js  server.test.mjs  tsconfig.json  vitest.config.js
docs/: BACKEND_SERVICES.md  BACKUP_IMPLEMENTATION_SUMMARY.md  DATABASE_BACKUP_GUIDE.md  DEPENDENCIES.md  GEMINI_VSCODE_SETUP.md  LEARNING_SYSTEM.md  MCP_SCHEMA_IMPROVEMENTS_IMPLEMENTED.md  MONOREPO_NEXT_LEVEL_2026.md  PATHS_POLICY.md  PORTS.md  REFACTORING_OPPORTUNITIES.md  RESEARCH_SUMMARY_2026-01-14.md  SELF_HEALING_SYSTEM.md  WORKSPACE_STRUCTURE.md  prd-ai-youtube-channel-budget.md  prd-ai-youtube-channel.md
memory/: glossary.md
patches/: nx@22.4.5.patch  nx@22.7.1.patch
scripts/: Dev Terminal.bat  Initialize-DevProcessEnvironment.ps1  Invoke-Agent.ps1  LAUNCH_ALL_DEBUG.bat  LearningCommands.psm1  LearningSystem.psm1  Manage-Agents.ps1  Monitor-DevEnvironment.ps1  New-Issue.ps1  (+78 more)
(+4599 files in other folders)
