[package]
name = "nova-agent"
version = "1.3.0"
description = "Neural Omnipresent Virtual Assistant - Desktop Application"
authors = ["NOVA Team"]
license = "MIT"
repository = ""
default-run = "nova-agent"
edition = "2021"
rust-version = "1.70"

[lib]
doctest = false

[[bin]]
name = "nova-agent"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
scraper = "0.18.1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
tauri-plugin-shell = "2.3.5"
keyring = "2"
regex = "1"
jsonwebtoken = "9"
screenshots = "0.8"
tauri-plugin-store = "2.4.2"
axum = "0.7.9"
tower-http = { version = "0.6.8", features = ["cors"] }
lancedb = "0.27.1"
arrow-array = "57"
arrow-schema = "57"

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security"
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Optimize for size and performance
[profile.release]
opt-level = "s"   # Optimize for size
lto = false       # Disable LTO to reduce memory usage during build
codegen-units = 1  # Single codegen unit — reduces peak LLVM memory (16 units = 16 parallel threads)
strip = true      # Strip symbols
panic = "abort"   # Smaller binaries

# All dependency crates: opt-level=0 + 256 codegen-units + sequential LLVM threads.
#
# Rationale (rust-lang/rust#70035, Tauri issue #13638):
#  - opt-level=0  → ~40% less peak LLVM memory per crate vs opt-level=1
#  - codegen-units=256 → each unit is 1/256 of total IR
#  - -C threads=1 (in .cargo/config.toml rustflags) → LLVM processes those 256
#    units ONE AT A TIME instead of N_CPU in parallel; peak RSS ≈ 1/256 of total
#  - incremental=false → no incremental cache memory overhead
#
# Together these allow windows-rs 0.61 (37 Win32 features) and the full
# datafusion/lance/arrow stack to compile on a memory-constrained machine.
[profile.release.package."*"]
opt-level = 0
codegen-units = 256
incremental = false

[profile.dev]
opt-level = 0
debug = true
strip = false
