[package]
name = "vibe-code-studio"
version = "1.2.0"
description = "AI-Powered Code Editor"
authors = ["VibeTech"]
edition = "2021"

[lib]
name = "vibe_code_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
# tauri-plugin-updater intentionally removed until release signing is configured.
# See AutoUpdateService.ts for the re-enablement checklist.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "io-util", "sync", "macros", "process"] }
portable-pty = "0.9.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
window-vibrancy = "0.5"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
