[package]
name = "vtde"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vtde_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["net", "macros", "io-util", "full"] }
open = "5"
dirs = "6"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
urlencoding = "2"
tauri-plugin-localhost = "2.3.2"
portable-pty = "0.9.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[profile.release]
codegen-units = 1

